Fixes some spacing issues that caused horizontal scroll to be possible

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -56,26 +56,24 @@
     }
 
     .about__title {
-        width: 100vw;
         text-align: center;
     }
 
     .about__description {
-        width: 100vw;
+        width: 96vw;
     }
 
     .about__darby .about__title {
-        width: 100vw;
         text-align: center;
     }
 
     .about__darby .about__description {
-        width: 100vw;
+        width: 96vw;
         text-align: left;
     }
 
     .about__clarissa__picture, .about__darby__picture {
-        width: 100vw;
+        width: 96vw;
         height: 32vw;
         margin-top: 5vw;
         background-size: contain;
