--- a/src/less/main.less
+++ b/src/less/main.less
@@ -26,7 +26,6 @@ html {
     color: #7CABDC;
     font-family: 'Louis George Cafe Bold', Verdana, Geneva, Tahoma, sans-serif;
     font-size: 72px;
-    width: 100vw;
     text-align: center;
     margin-bottom: 30px;
 }
